@@ -76,6 +76,9 @@ using std::string;
 
 #define ISRADIO(x) ((x)->Vpid()==0||(x)->Vpid()==1||(x)->Vpid()==0x1fff)
 
+#define UPDS_WITH_OSD (1<<1)
+#define UPDS_WITH_EPGSCAN (1<<2)
+#define UPDS_WITH_NOBREAK (1<<3)
 
 #if APIVERSNUM >= 10503 
 // Icons used in VDRSymbols-Font
